@@ -3,7 +3,7 @@ use warnings;
 
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 19;
+use Test::More 'tests' => 27;
 use Test::NoWarnings;
 use Wikibase::Datatype::Struct::Value::Globecoordinate;
 
@@ -66,3 +66,24 @@ is($ret->longitude, 20.1, 'Method longitude().');
 is($ret->precision, 1, 'Method precision().');
 is($ret->type, 'globecoordinate', 'Method type().');
 is_deeply($ret->value, [10.1, 20.1], 'Method value().');
+
+# Test.
+$struct_hr = {
+	'value' => {
+		'altitude' => undef,
+		'globe' => 'http://test.wikidata.org/entity/Q2',
+		'latitude' => 51.566516666667,
+		'longitude' => -0.14549722222222,
+		'precision' => 2.7777777777778e-06,
+	},
+	'type' => 'globecoordinate',
+};
+$ret = Wikibase::Datatype::Struct::Value::Globecoordinate::struct2obj($struct_hr);
+isa_ok($ret, 'Wikibase::Datatype::Value::Globecoordinate');
+is($ret->altitude, undef, 'Method altitude().');
+is($ret->globe, 'Q2', 'Method globe().');
+is($ret->latitude, 51.566516666667, 'Method latitude().');
+is($ret->longitude, -0.14549722222222, 'Method longitude().');
+is($ret->precision, 2.7777777777778e-06, 'Method precision().');
+is($ret->type, 'globecoordinate', 'Method type().');
+is_deeply($ret->value, [51.566516666667, -0.14549722222222], 'Method value().');
